refactor: refactor and fix minor issues