@@ -13,6 +13,7 @@ import org.bukkit.OfflinePlayer;
 import org.bukkit.World;
 import org.bukkit.entity.Player;
 import org.bukkit.plugin.Plugin;
+import org.bukkit.plugin.RegisteredServiceProvider;
 
 import java.util.Collections;
 import java.util.Set;
@@ -29,12 +30,12 @@ public class VaultIntegration implements FIntegration {
 
     @Override
     public void hook() {
-        var permissionProvider = plugin.getServer().getServicesManager().getRegistration(Permission.class);
+        RegisteredServiceProvider<Permission> permissionProvider = plugin.getServer().getServicesManager().getRegistration(Permission.class);
         if (permissionProvider != null) {
             this.permission = permissionProvider.getProvider();
         }
 
-        var chatProvider = plugin.getServer().getServicesManager().getRegistration(Chat.class);
+        RegisteredServiceProvider<Chat> chatProvider = plugin.getServer().getServicesManager().getRegistration(Chat.class);
         if (chatProvider != null) {
             this.chat = chatProvider.getProvider();
         }
@@ -57,7 +58,7 @@ public class VaultIntegration implements FIntegration {
         }
 
         OfflinePlayer offlinePlayer = Bukkit.getOfflinePlayer(fPlayer.getUuid());
-        World world = Bukkit.getWorlds().get(0);
+        World world = Bukkit.getWorlds().getFirst();
 
         return permission.playerHas(world.getName(), offlinePlayer, permissionName);
     }
